<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/inicio"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_section1"/>

        <item
            android:id="@+id/perfil"
            android:checked="false"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/title_section2"/>

        <item
            android:id="@+id/ouffit"
            android:checked="false"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/title_section3"/>

        <item
            android:id="@+id/cambiar_password"
            android:checked="false"
            android:icon="@drawable/ic_lock_black_24dp"
            android:title="@string/title_section5"/>

        <item
            android:id="@+id/cerrar_sesion"
            android:checked="false"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/title_section6"/>





    </group>


</menu>