<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentPassword"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.silvanadorantes.navigationviewmaterialdesign.Fragmentos.CambiarPasswordFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_contraseña_Actual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:counterMaxLength="15"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/et_contraseña_actual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contraseña_actual"
            android:textColorHint="@color/text_normal"
            android:textColor="@color/text_normal"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:errorEnabled="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_Contraseña_Nueva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_contraseña_Actual"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:counterMaxLength="15"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/et_Contraseña_Nueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contraseña_nueva"
            android:textColorHint="@color/text_normal"
            android:textColor="@color/text_normal"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:errorEnabled="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_Repita_Nueva_Contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_Contraseña_Nueva"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:counterMaxLength="15"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/et_Repita_Nueva_Contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contraseña_repetir_nueva"
            android:textColorHint="@color/text_normal"
            android:textColor="@color/text_normal"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:errorEnabled="true"/>

    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/button_cancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_cancelar"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"/>

        <Button
            android:id="@+id/button_guardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/action_guardar"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"/>

    </LinearLayout>


</LinearLayout>
