<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentoMiCuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.silvanadorantes.navigationviewmaterialdesign.Fragmentos.MiCuentaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgenPerfil"
            android:layout_width="148dp"
            android:layout_height="148dp"
            android:elevation="@dimen/elevation_perfil_image"
            android:layout_gravity="center"
            android:src="@drawable/silvanadorantes"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:layout_margin="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_large"
            android:scaleType="centerCrop"
            app:border_color="@color/white"
            app:border_width="@dimen/border_perfil_image"/>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbarLayout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <!--datos  del usuario -->
                <TextView
                    android:id="@+id/tv_informacionUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/info_usuario"
                    android:textSize="17sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/text_list"/>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/tv_nombre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nombre_usuario"
                            android:layout_marginLeft="2dp"
                            android:layout_marginTop="16dp"
                            android:textSize="17sp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/primaryText"/>

                        <TextView
                            android:id="@+id/nombre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Silvana Dorantes"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="1dp"
                            android:padding="1dp"
                            android:textSize="17sp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/primaryText"
                            android:layout_below="@+id/tv_nombre"
                            android:layout_alignStart="@+id/tv_nombre"/>

                        <View
                            android:id="@+id/divider"
                            android:layout_marginTop="4dp"
                            android:layout_below="@+id/nombre"
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/divider"/>


                        <TextView
                            android:id="@+id/tv_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/divider"
                            android:text="@string/email_usuario"
                            android:layout_marginLeft="2dp"
                            android:layout_marginTop="16dp"
                            android:textSize="17sp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/primaryText"/>

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="silvanadorantes767@gmail.com"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="1dp"
                            android:padding="1dp"
                            android:textSize="17sp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/primaryText"
                            android:layout_below="@+id/tv_email"
                            android:layout_alignStart="@+id/nombre" />

                        <View
                            android:id="@+id/divider2"
                            android:layout_marginTop="4dp"
                            android:layout_below="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/divider"/>

                        <TextView
                            android:id="@+id/tv_movil"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/divider2"
                            android:text="@string/telefono_usuario"
                            android:layout_marginLeft="2dp"
                            android:layout_marginTop="16dp"
                            android:textSize="17sp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/primaryText"/>

                        <TextView
                            android:id="@+id/movil"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="04140000000"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="1dp"
                            android:padding="1dp"
                            android:textSize="17sp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/primaryText"
                            android:layout_below="@+id/tv_movil"
                            android:layout_alignStart="@+id/email" />


                    </RelativeLayout>



                <!--direccion del usuario -->

                <TextView
                    android:id="@+id/tv_direccion_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/direccion_usuario"
                    android:textSize="17sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/text_list"/>



                    <TextView
                        android:id="@+id/direccionUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/direccion_user"
                        android:textSize="17sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/primaryText"/>




            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


    </LinearLayout>





</android.support.design.widget.CoordinatorLayout>
